gooey-macros/src/snapshots/gooey_macros__animation__test__tuple_struct.snap
---
source: gooey-macros/src/animation.rs
expression: unparse(ok)
---
impl ::gooey::animation::LinearInterpolate for HelloWorld {
    /**# Panics
 Panics if any field's lerp panics (this should only happen on percentages outside 0..1 range).*/
    fn lerp(&self, __target: &Self, __percent: f32) -> Self {
        HelloWorld {
            0: ::gooey::animation::LinearInterpolate::lerp(
                &self.0,
                &__target.0,
                __percent,
            ),
            1: ::gooey::animation::LinearInterpolate::lerp(
                &self.1,
                &__target.1,
                __percent,
            ),
        }
    }
}

